--- a/styles/main.css
+++ b/styles/main.css
@@ -1,19 +1,20 @@
 body {
-    margin: 0;
-    padding: 0;
-    grid-template-areas: 
-        "header header"
-        "main main";
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 0.5fr repeat(6, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
     font-family: Optima, sans-serif;
-    background-color: rgb(234, 185, 234);
+    background-color: rgba(255, 247, 232, 0.839);
+    color: rgb(199, 112, 112);
 }
 
 /*** HEADER ****/
 
 header {
-    grid-area: header;
+    grid-area: 1 / 1 / 2 / 7;
     /* border: 2px solid red; */
-    padding-bottom: 100px;
+    /* padding-bottom: 60px; */
 }
 
 header h1 {
@@ -23,31 +24,136 @@ header h1 {
 }
 
 header li {
-    float: left;
+    float: right;
     margin-top: 50px;
-    padding-right: 50px;
+    padding-right: 40px;
 }
 
 header ul {
     list-style: none;
     margin-right: 20px;
+    display: inline;
 }
 
 header a {
     text-decoration: none;
     font-size: 18px;
-    color: black;
+    color: rgb(199, 112, 122);
 }
 
 /**** MAIN PAGES ****/
 
 main {
-    border: 2px solid green;
-    width: 100%;
-    height: 100%;
+    grid-area: 2 / 1 / 8 / 7;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
+    /* border: 2px solid blue; */
+    padding: 10px;
 }
+/* 
+.home-page-container {
+    border: 2px solid red;
+} */
 
 .card {
-    background-color: white;
-    position: relative;
+    background-color: rgb(254, 217, 217);
+    box-shadow: 10px 10px 5px grey;
+    /* display: inline-block; */
+    /* padding: 10px; */
+    /* margin: 15px 20px; */
+}
+
+.intentions {
+    grid-area: 1 / 1 / 3 / 4;
+    padding: 15px 15px;
+}
+
+.intentions h1, h3 {
+    display: inline;
+    /* padding-top: 15px; */
+}
+
+.intentions h1 {
+    padding-top: 15px;
+    /* padding-left: 15px; */
+}
+
+.intentions h3 {
+    float: right;
+    padding-right: 20px;
+}
+
+.motivation {
+    grid-area: 1 / 4 / 3 / 7;
+    text-align: center;
+    padding-top: 8%;
+}
+
+.workouts {
+    grid-area: 3 / 1 / 5 / 7;
+    padding: 15px 15px;
+}
+
+.workout-flex-box {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+}
+
+.workout-card {
+    background-color: rgb(249, 243, 243);
+    box-shadow: 10px 10px 5px grey;
+    padding: 10px 10px;
+}
+
+.individual-workout h3 {
+    display: block;
+}
+
+.individual-workout .workout-card{
+    /* border: 4px solid black; */
+    margin: 0px 50px;
+    display: inline-block;
+}
+.meals {
+    grid-area: 5 / 1 / 8 / 4;
+    padding: 5px 5px;
+}
+
+.individual-meals {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+}
+
+.meal-card {
+    background-color: rgb(249, 243, 243);
+    box-shadow: 10px 10px 5px grey;
+    padding: 5px 5px;
+    /* border: 2px solid green; */
+    width: 150%;
+    height: auto;
+}
+
+
+
+.tracking {
+    grid-area: 5 / 4 / 8 / 7;  
+    padding: 15px 15px;
+}
+
+#tracking-form {
+    /* border: 2px solid green; */
+    text-align: center;
+}
+
+#tracking-form input, select {
+    text-align: center;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    padding-right: 50px;
 }
