--- a/styles/main.css
+++ b/styles/main.css
@@ -13,8 +13,6 @@ body {
 
 header {
     grid-area: 1 / 1 / 2 / 7;
-    /* border: 2px solid red; */
-    /* padding-bottom: 60px; */
 }
 
 header h1 {
@@ -41,6 +39,13 @@ header a {
     color: rgb(199, 112, 122);
 }
 
+/**** LOGIN ****/
+#login {
+    /* padding-left: 150%; */
+    /* border: 2px solid red; */
+}
+
+
 /**** MAIN PAGES ****/
 
 main {
@@ -50,53 +55,31 @@ main {
     grid-template-rows: repeat(7, 1fr);
     grid-column-gap: 15px;
     grid-row-gap: 15px;
-    /* border: 2px solid blue; */
     padding: 10px;
 }
-/* 
-.home-page-container {
-    border: 2px solid red;
-} */
+
 
 .card {
     background-color: rgb(254, 217, 217);
     box-shadow: 10px 10px 5px grey;
     border-radius: 25px;
-    /* display: inline-block; */
-    /* padding: 10px; */
-    /* margin: 15px 20px; */
 }
 
-.intentions {
-    grid-area: 1 / 1 / 3 / 4;
+.user {
+    grid-area: 1 / 1 / 4 / 3;
     padding: 15px 15px;
 }
 
-.intentions h1, h3 {
-    display: inline;
-    letter-spacing: 2px;
-    /* padding-top: 15px; */
-}
-
-.intentions h1 {
-    padding-top: 15px;
-    /* padding-left: 15px; */
-}
-
-.intentions h3 {
-    float: right;
-    padding-right: 20px;
-}
 
 .motivation {
-    grid-area: 1 / 4 / 3 / 7;
+    grid-area: 1 / 3 / 3 / 7; 
     text-align: center;
-    padding-top: 8%;
+    padding-top: 2%;
     letter-spacing: 2px;
 }
 
 .workouts {
-    grid-area: 3 / 1 / 5 / 7;
+    grid-area: 3 / 3 / 8 / 7;
     padding: 15px 15px;
     letter-spacing: 2px;
 }
@@ -123,61 +106,15 @@ main {
     margin: 0px 50px;
     display: inline-block;
 }
-.meals {
-    grid-area: 5 / 1 / 8 / 4;
+.stats {
+    grid-area: 4 / 1 / 6 / 3;
     padding: 5px 5px;
     letter-spacing: 2px;
 }
 
-.individual-meals {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-}
 
-.meal-card {
-    background-color: rgb(249, 243, 243);
-    box-shadow: 10px 10px 5px grey;
-    padding: 5px 5px;
-    /* border: 2px solid green; */
-    width: 150%;
-    height: auto;
-}
-
-
-
-.tracking {
-    grid-area: 5 / 4 / 8 / 7;  
+.stats-form {
+    grid-area: 6 / 1 / 8 / 3;  
     padding: 15px 15px;
     letter-spacing: 2px;
 }
-
-#tracking-form {
-    /* border: 2px solid green; */
-    text-align: center;
-}
-
-#tracking-form input, select {
-    text-align: center;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    padding-right: 50px;
-}
-
-#modal {
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.75);
-  }
-  
-  #intentions-form {
-    background-color: rgb(255, 237, 194);
-    margin-top: 20vh;
-    width: 600px;
-    margin: 20vh auto 0;
-  }
