--- a/styles/main.css
+++ b/styles/main.css
@@ -118,3 +118,27 @@ main {
     padding: 15px 15px;
     letter-spacing: 2px;
 }
+
+#workouts-main {
+    grid-area: 2 / 1 / 7 / 7;
+}
+
+.all-workouts {
+    grid-area: 1 / 1 / 6 / 3;
+}
+
+.my-workouts {
+    grid-area: 1 / 3 / 6 / 5;
+}
+
+.create-new-workouts {
+    grid-area: 1 / 5 / 6 / 7;
+}
+
+#exercises-main {
+    grid-area: 2 / 1 / 7 / 7;
+}
+
+.all-exercises {
+    grid-area: 1 / 1 / 6 / 3;
+}
